# Git

./: ClassCadastro.py  ClassCliente.py  Class_Cliente.py  Class_Conta.py  Class_Histo.py  TelaCadastro.ui  TelaTeste.py  main.py  tela.py
.qt_for_python/uic/: Buscar.py  (+3 more)
AnaliseSeo/: AnalisedeURL.py  main.py  setup.cfg
AnaliseSeo/src/: classAnalise.py  main.py
AnaliseSeo_2022_B_E/: LICENSE  README.md  setup.cfg  setup.py
Atividade_MultiThreads/: cliente.py  servidor_multi_threads.py
Atividade_Telas/: Buscar.ui  Cadastro.ui  ClassCadastro.py  TelaCadastro.ui  TelaInicial.ui  mult_telas.py  tela.py  tela_busca.py  tela_cadastro.py  tela_inicial.py
Projeto_Conta/: ClassConta.py  Comandos_para_auxiliar.txt  classBanco.py  classCadastro.html  classCadastro.py  classCliente.html  classCliente.py  classConta.html  classConta.py  classHisto.html  classHisto.py  connection_Mysql.py  depositar.ui  extrato.ui  historico.txt  main.html  main.py  main_cliente.py  main_cs.py  main_servidor.py  sacar.ui  tela_CadastroCli.py  tela_CadastroCon.py  tela_cadastroCli.ui  tela_depositar.py  tela_extrato.py  tela_login.py  tela_menu.py  tela_menu.ui  tela_menuCadastrar.py  tela_menuCadastrar.ui  tela_sacar.py  tela_transferir.py  teste_elievelto_bd.py  transferir.ui
analiseBSeO_projeto/: README.md  classAnalise.html  main.html  setup.cfg  setup.py
atividade_arquivos/: Contado_de_palavras.py  data.json  fabula.txt  media_alunos_arquivos.html  media_alunos_arquivos.py  notas.txt  repetem.json
teste-bancodedados/: teste2.py
tests/: main.py  test_pytest.py  test_pytest2.py
(+72 files in other folders)
