[metadata]
name = AnaliseSeo
version = 0.0.1
author = Bruna & Elievelton
author_email = gamessbrunaa@gmail.com //
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = github.com/
classifiers =
    Programing Language :: Python :: 3
    License :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find
python_requires = >= 3.5

[options.packages.find]
where = src